--- a/ui_lovelace_minimalist/dashboard/views/01-home.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/01-home.yaml
@@ -90,6 +90,7 @@ cards:
           hui-horizontal-stack-card$: |
             #root { 
               justify-content: center;
+              --stack-card-gap: 0;
             }
         card:
           type: horizontal-stack
