--- a/ui_lovelace_minimalist/dashboard/views/mainviews/lab.yaml
+++ b/ui_lovelace_minimalist/dashboard/views/mainviews/lab.yaml
@@ -255,7 +255,7 @@ cards:
     conditions:
       - condition: state
         entity: sensor.mfc_7860dw_status
-        state: "available"
+        state_not: unavailable
     card:
       type: entities
       icon: mdi:printer
