--- a/entities/alerts/washing_machine.yaml
+++ b/entities/alerts/washing_machine.yaml
@@ -5,11 +5,11 @@
 
 washing_machine:
   name: Washing Machine done
-  entity_id: input_boolean.washing_machine_on
+  entity_id: input_boolean.washing_machine_end
   title: 🩲 Washer done!
   message: false
   done_message: clear_notification
-  state: "off"
+  state: "on"
   repeat: 15
   data:
     tag: washer_done
