--- a/ui_lovelace_minimalist/custom_cards/templates/chips/chip_icon_state_if_value.yaml
+++ b/ui_lovelace_minimalist/custom_cards/templates/chips/chip_icon_state_if_value.yaml
@@ -9,7 +9,7 @@ chip_icon_state_if_value:
     icon:
       - color: >
           [[[ if (entity.state > 0 || entity.state == variables.on_state) 
-                return "var(--red-color)" ;
+                return variables.on_color ;
               else return "var(--green-color)"; ]]]
   state:
     - operator: "template"
@@ -20,6 +20,7 @@ chip_icon_state_if_value:
   variables:
     ulm_chip_mdi_icon_state_entity: "[[[ return variables.entity; ]]]"
     on_state: "on"
+    on_color: var(--red-color)
   tap_action:
     action: "[[[ if (variables.navigation_path) return 'navigate'; else return 'more-info'; ]]]"
     navigation_path: "[[[ return variables.navigation_path; ]]]"
